fixed addr text overflow

--- a/client/src/theme/Normalise.scss
+++ b/client/src/theme/Normalise.scss
@@ -61,7 +61,7 @@ a:focus, a:active, button:active, button:focus {
 }
 
 html {
-	font-size: 12px;
+	font-size: 14px;
 	font-family: 'Roboto', sans-serif;
 	
 	@media (min-width: 768px) {
